Fix link text in high contrast mode in IE
When Windows is in high contrast mode, IE will remove convert any transparency and this element will then block the image and title text being visible. High contrast mode also seems to disable the z-index.

The [`-ms-high-contrast-adjust` property](https://developer.mozilla.org/en-US/docs/Archive/Web/CSS/-ms-high-contrast-adjust) prevents IE modifying the color.

(For information, the background colour seems to be set to support IE 10 and below)

--- a/app/assets/stylesheets/govuk_publishing_components/components/_image-card.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_image-card.scss
@@ -88,6 +88,7 @@
     height: 100%;
     $ie-background: rgba(255, 255, 255, 0);
     background: $ie-background; // because internet explorer
+    -ms-high-contrast-adjust: none;
   }
 
   @include govuk-media-query($from: mobile, $until: tablet) {
